# aind-low-point

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci-call.yml
dev/: CONFIG_MODEL.md  COORDINATES.md  CORE_CONCEPTS.md  MODULE_MAP.md  PIPELINE.md  PIPELINE_PLAN.md  POOL_RUN_CONFIGS.md  minlp_assignment_brief.md  optimizer_plan.md  optimizer_review_response.md  spin_basin_experiments.md  spin_search_heuristics.md  target_valid_atlas_design.md
docs/source/: architecture.rst  conf.py  configuration.rst  index.rst  optimization.rst  quickstart.rst
examples/: 786864-config.yml  836656-config-T12.plan.yml  836656-config-T12.yml  836656-config.yml  837229-config.yml  build5-template-config.plan.yml  build5-template-config.yml  launch_trame.py  launch_trame_config.py  trame_poc.py
scripts/: arc_first_mrv.py  augment_polish_with_offsets.py  basin_select_prototype.py  batched_adam_sweep.py  batched_adam_test.py  batched_basin_select_run.py  batched_full_rerank.py  batched_phase1_build.py  beam_adam_cluster.py  beam_restore_cluster.py  beam_search_cand4195.py  bundle_config.py  check_cse.py  check_fcl_among_p2_feasibles.py  coarse_fine_split.py  coarse_fine_surf.py  compare_manual_spin.py  compare_manual_vs_adam.py  compare_spin_restore_methods.py  convert_old_plan.py  cost_manual_vs_beam.py  diagnose_alpha_wrap_quality.py  diagnose_manual_fcl.py  diagnose_p2_fcl_discrepancies.py  diagnose_probe_well.py  diagnose_sdf_vs_fcl.py  diagnose_search.py  emit_plan_configs.py  enum_sanity_0283.py  eval_violation_at_augmented.py  export_handoff.py  export_handoff_plans.py  extract_implant_holes.py  feasibility_map.py  fetch_allen_ontology.py  ingest_analysis.py  ingest_feasibles.py  instrument_adam_freeze.py  log_candidate_trajectories.py  lr_schedule_sweep.py  (+35 more)
src/aind_low_point/: app.py  assets.py  build_runtime.py  calibration_conversion.py  ccf_ontology.py  ccf_overlay.py  cli.py  collisions.py  commands.py  common.py  config.py  controllers.py  core.py  fcl_backend.py  k3d_backend.py  orientation_codes.py  planning.py  pyvista_backend.py  rendering.py  scene.py  state_change.py  trame_controller.py
src/aind_low_point/data/: allen_ccf_ontology.json
src/aind_low_point/optimization/: __init__.py  arc_assignment.py  arc_first_principled.py  arc_first_search.py  arc_placement.py  assignment_contracts.py  atlas.py  batched_objective.py  batched_spin_restore.py  batched_static.py  clearance_metrics.py  clearance_sweep.py  coverage_jax.py  density.py  envelope.py  fcl_validator.py  geometry.py  headstages.py  hole_assignment.py  holes.py  joint_rerank.py  joint_rerank_jax.py  kinematics.py  objective.py  optimize.py  optimizer_vars.py  parallel_stage2.py  phase1_objective_jax.py  phase2_objective_jax.py  pose_bank.py  pose_features.py  probe_kinematics.py  probe_static.py  recording.py  reduced_objective_jax.py  sdf.py  sdf_clearance.py  sdf_jax.py  spin_restore_jax.py  stage3_jax.py  (+5 more)
src/aind_low_point/optimization/enumeration/: __init__.py  pose_bank.py  pose_features.py  seed_emission.py  visibility_atlas.py
src/aind_low_point/optimization/geometry/: __init__.py  headstages.py  holes.py  kinematics.py  probes.py
src/aind_low_point/optimization/objectives/: __init__.py  batched_reduced.py  batched_static.py  clearance_metrics.py  coverage.py  density.py  fcl_validator.py  phase1.py  phase2.py  probe_static.py  reduced_jax.py  scalar.py  spin_restore.py  variables.py
src/aind_low_point/optimization/pipeline/: __init__.py  contracts.py  emit.py  enumeration.py  phase1_build.py  phase1_geometry.py  phase1_pool.py  phase2_ipopt.py  probe_setup.py  restore.py  runtime_adapter.py  thick_well.py
src/aind_low_point/optimization/sdf/: __init__.py  build.py  clearance_sweep.py  envelope.py
src/aind_low_point/runtime/: __init__.py  build.py  calibration.py  canonicalize.py  chem_shift.py  export.py  loaders.py  plan_csv.py  probe_context.py  reducers.py  scene_geometry.py  shanks.py  transforms.py
tests/: config_factories.py  conftest.py  manual_tests.py  test_ccf_annotation_hemisphere.py  test_ccf_ontology.py  test_ccf_overlay.py  test_config_coercion.py  test_config_errors.py  test_config_models.py  test_config_validation.py  test_export_kinematics_parity.py  test_export_rig_arc_consistency.py  test_kinematic.py  test_objectives_threading.py  test_optimization_arc_assignment.py  test_optimization_arc_placement.py  test_optimization_density.py  test_optimization_geometry.py  test_optimization_headstages.py  test_optimization_hole_assignment.py  test_optimization_holes.py  test_optimization_joint_rerank.py  test_optimization_kinematics.py  test_optimization_ml_anchors_mrv.py  test_optimization_objective.py  test_optimization_optimize.py  test_optimization_pipeline_contracts.py  test_optimization_runtime_adapter.py  test_reducers.py  test_round_trip.py  test_runtime_probe_context.py  test_runtime_scene_geometry.py  test_shanks.py
