[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-low-point"
description = "Plan neuroscience experiments"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Allen Institute for Neural Dynamics" },
  { name = "Galen Lynch", email = "galen@galenlynch.com" },
  { name = "Yoni Browning", email = "yoni.browning@alleninstitute.org" },
]
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"
version = "0.1.0"

dependencies = [
  "aind-anatomical-utils>=0.1,<0.2",
  "aind_mri_utils>=0.10,<2",
  "cma>=4.4.4",
  "ipyevents>=2,<3",
  "k3d>=2,<3",
  "mapbox-earcut>=2.0.0",
  "numpy>=1.20,<3",
  "omegaconf>=2,<3",
  "pandas>=2,<3",
  "pydantic>=2,<3",
  "pynrrd>=1,<2",
  "python-fcl>=0.7,<0.8",
  "pyvista>=0.46.5",
  "shapely>=2.0.7",
  "SimpleITK>=2,<3",
  "trame>=3.12.0",
  "trame-vtk>=2.11.3",
  "trame-vuetify>=3.2.1",
  "trimesh[recommend]>=4,<5",
  "vtk>=9.5.2",
]

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/aind-low-point/"
Issues = "https://github.com/AllenNeuralDynamics/aind-low-point/issues"
Changelog = "https://github.com/AllenNeuralDynamics/aind-low-point/blob/main/CHANGELOG.md"


[dependency-groups]
dev = ["codespell", "pytest", "pytest-cov", "ruff", "interrogate"]
vscode = [{ include-group = "dev" }, "ipykernel", "pip", "ipympl"]
docs = [
  { include-group = "dev" },
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pymdown-extensions",
  "ruff",
  "sphinx",
  "furo",
]

[tool.setuptools.package-data]
"aind_low_point" = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["scripts/reference_k3d_notebook.py"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "I", "F", "E", "W"]
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = "numpy" }

[tool.codespell]
skip = ".git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock"
ignore-words-list = "nd"

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-fail-under=0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore_module = true
fail-under = 30
exclude = [
  "__init__.py",
  "tests",
  "docs",
  "build",
  "setup.py",
  "examples",
  "site",
]

[tool.commitizen]
version_provider = "pep621"
version_files = ["pyproject.toml", "src/aind_low_point/__init__.py:__version__"]
update_changelog_on_bump = true
tag_format = "v$version"
major_version_zero = true
