[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-low-point"
description = "Plan neuroscience experiments"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Allen Institute for Neural Dynamics" },
  { name = "Galen Lynch", email = "galen@galenlynch.com" },
  { name = "Yoni Browning", email = "yoni.browning@alleninstitute.org" },
]
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"
version = "0.1.0"

# Core dependencies — everything needed for loading, visualising,
# and interactively editing plans (the trame app, Jupyter K3D
# controllers, config + asset loading, runtime). Excludes the
# placement-optimizer stack; install ``[optimization]`` for that.
dependencies = [
  "aind-anatomical-utils>=0.1,<0.2",
  "aind_mri_utils>=0.12.1,<2",  # >=0.12.1: watertight mask_to_trimesh (padded marching cubes)
  "ipyevents>=2,<3",
  "k3d>=2,<3",
  "mapbox-earcut>=2.0.0",
  "numpy>=1.20,<3",
  "omegaconf>=2,<3",
  "pandas>=2,<3",
  "pydantic>=2,<3",
  "pynrrd>=1,<2",
  "python-fcl>=0.7,<0.8",
  "pyvista>=0.46.5",
  "scikit-learn>=1.6.1",
  "shapely>=2.0.7",
  "SimpleITK>=2,<3",
  "trame>=3.12.0",
  "trame-vtk>=2.11.3",
  "trame-vuetify>=3.2.1",
  "trimesh[recommend]>=4,<5",
  "tyro>=1.0.13",
  "vtk>=9.5.2",
]

[project.optional-dependencies]
# Placement-optimizer stack: differentiable SDFs (JAX), alpha-wrap
# (pymeshlab), CMA-ES, mesh decomposition helpers, NVIDIA monitoring.
# Adds ~1 GB of dependencies.
#
# Platform notes:
#   - On Linux, JAX is installed with ``[cuda12]`` extras so it can
#     use NVIDIA GPUs. The CUDA plugin wheels live on PyPI and only
#     ship for Linux.
#   - On macOS/Windows, plain ``jax`` is installed (CPU only). The
#     optimizer still works, just slower.
optimization = [
  "cma>=4.4.4",
  "coacd>=1.0.11",
  # Python bindings for IPOPT. Requires the native IPOPT library to be
  # available on the system when the wheel cannot satisfy the platform.
  "cyipopt>=1.7.0",
  "jax[cuda12]>=0.4.30 ; sys_platform == 'linux'",
  "jax>=0.4.30 ; sys_platform != 'linux'",
  "jaxlib>=0.4.30",
  "libigl>=2.5,<3",
  "mesh2sdf>=1.1.0",
  "pymeshfix>=0.17.2",
  "pymeshlab>=2025.7.post1",
  "pynvml>=13.0.1",
]

[project.scripts]
alp-plan = "aind_low_point.cli:main"
alp-phase1 = "aind_low_point.optimization.pipeline.phase1_pool:main"
alp-phase2 = "aind_low_point.optimization.pipeline.phase2_ipopt:main"
alp-emit = "aind_low_point.optimization.pipeline.emit:main"
alp-plan-csv = "aind_low_point.runtime.plan_csv:main"

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/aind-low-point/"
Issues = "https://github.com/AllenNeuralDynamics/aind-low-point/issues"
Changelog = "https://github.com/AllenNeuralDynamics/aind-low-point/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "codespell",
    "pytest",
    "pytest-cov",
    "ruff",
    "interrogate",
    "pytest-xdist>=3.8.0",
]
vscode = [{ include-group = "dev" }, "ipykernel", "pip", "ipympl"]
docs = [
  { include-group = "dev" },
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pymdown-extensions",
  "ruff",
  "sphinx",
  "furo",
]

[tool.setuptools.package-data]
"aind_low_point" = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["scripts/reference_k3d_notebook.py"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "I", "F", "E", "W"]
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = "numpy" }

[tool.mypy]
python_version = "3.10"
files = [
  "src/aind_low_point/runtime/probe_context.py",
  "src/aind_low_point/runtime/scene_geometry.py",
  "src/aind_low_point/optimization/pipeline/contracts.py",
  "src/aind_low_point/optimization/pipeline/runtime_adapter.py",
  "src/aind_low_point/optimization/pipeline/enumeration.py",
  "src/aind_low_point/optimization/pipeline/phase1_pool.py",
  "src/aind_low_point/optimization/pipeline/phase2_ipopt.py",
  "src/aind_low_point/optimization/pipeline/emit.py",
]
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = false
disallow_untyped_defs = false
disable_error_code = ["import-untyped"]

[tool.codespell]
skip = ".git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock"
ignore-words-list = "nd"

[tool.pytest.ini_options]
# Fast by default: no coverage (it traces every line for a report nothing
# gates), parallel across cores (-n auto), and the heavy JAX compile/optimize
# tests deselected via the `slow` marker. Full run: `pytest -m "" ` (all) or
# `pytest -m slow`; coverage: `pytest --cov=src -p no:xdist -m ""`.
addopts = "--strict-markers --tb=short -n auto -m 'not slow'"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: heavy JAX compile/optimize/mesh test — deselected by default",
]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore_module = true
fail-under = 30
exclude = [
  "__init__.py",
  "tests",
  "docs",
  "build",
  "setup.py",
  "examples",
  "site",
]

[tool.commitizen]
version_provider = "pep621"
version_files = ["pyproject.toml", "src/aind_low_point/__init__.py:__version__"]
update_changelog_on_bump = true
tag_format = "v$version"
major_version_zero = true
